Fix Main text-align

--- a/src/Components/Main.scss
+++ b/src/Components/Main.scss
@@ -30,6 +30,7 @@
         position: absolute;
         top: 25%;
         padding: 15px;
+        text-align: left;
 
         @media(min-width: 1024px) {
             height: 570px;
